respond to modelsummary changes

--- a/slides/EDUC641_15_regression2.html
+++ b/slides/EDUC641_15_regression2.html
@@ -339,64 +339,35 @@ datasummary_skim(who1)
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Unique (#) &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Missing (%) &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Mean &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; SD &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Min &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Median &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Max &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt;    &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Unique &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Missing Pct. &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Mean &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; SD &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Min &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Median &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Max &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; schooling &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 89 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 12.9 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2.9 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 4.9 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 13.1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 20.4 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt;  &lt;svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="svglite" width="48.00pt" height="12.00pt" viewBox="0 0 48.00 12.00"&gt;&lt;defs&gt;&lt;style type="text/css"&gt;
-    .svglite line, .svglite polyline, .svglite polygon, .svglite path, .svglite rect, .svglite circle {
-      fill: none;
-      stroke: #000000;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      stroke-miterlimit: 10.00;
-    }
-    .svglite text {
-      white-space: pre;
-    }
-  &lt;/style&gt;&lt;/defs&gt;&lt;rect width="100%" height="100%" style="stroke: none; fill: none;"&gt;&lt;/rect&gt;&lt;defs&gt;&lt;clipPath id="cpMC4wMHw0OC4wMHwwLjAwfDEyLjAw"&gt;&lt;rect x="0.00" y="0.00" width="48.00" height="12.00"&gt;&lt;/rect&gt;&lt;/clipPath&gt;&lt;/defs&gt;&lt;g clip-path="url(#cpMC4wMHw0OC4wMHwwLjAwfDEyLjAw)"&gt;
-&lt;/g&gt;&lt;defs&gt;&lt;clipPath id="cpMC4wMHw0OC4wMHwyLjg4fDEyLjAw"&gt;&lt;rect x="0.00" y="2.88" width="48.00" height="9.12"&gt;&lt;/rect&gt;&lt;/clipPath&gt;&lt;/defs&gt;&lt;g clip-path="url(#cpMC4wMHw0OC4wMHwyLjg4fDEyLjAw)"&gt;&lt;rect x="-0.80" y="11.16" width="5.73" height="0.51" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="4.93" y="10.82" width="5.73" height="0.84" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="10.67" y="8.28" width="5.73" height="3.38" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="16.40" y="6.09" width="5.73" height="5.57" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="22.14" y="3.22" width="5.73" height="8.44" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="27.87" y="5.08" width="5.73" height="6.59" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="33.61" y="8.79" width="5.73" height="2.87" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="39.34" y="10.82" width="5.73" height="0.84" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="45.08" y="11.49" width="5.73" height="0.17" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;/g&gt;&lt;/svg&gt;
-&lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 89 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 12.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 4.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 13.1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 20.4 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; life_expectancy &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 35 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 71.7 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 8.0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 51.0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 74.0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 88.0 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt;  &lt;svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="svglite" width="48.00pt" height="12.00pt" viewBox="0 0 48.00 12.00"&gt;&lt;defs&gt;&lt;style type="text/css"&gt;
-    .svglite line, .svglite polyline, .svglite polygon, .svglite path, .svglite rect, .svglite circle {
-      fill: none;
-      stroke: #000000;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      stroke-miterlimit: 10.00;
-    }
-    .svglite text {
-      white-space: pre;
-    }
-  &lt;/style&gt;&lt;/defs&gt;&lt;rect width="100%" height="100%" style="stroke: none; fill: none;"&gt;&lt;/rect&gt;&lt;defs&gt;&lt;clipPath id="cpMC4wMHw0OC4wMHwwLjAwfDEyLjAw"&gt;&lt;rect x="0.00" y="0.00" width="48.00" height="12.00"&gt;&lt;/rect&gt;&lt;/clipPath&gt;&lt;/defs&gt;&lt;g clip-path="url(#cpMC4wMHw0OC4wMHwwLjAwfDEyLjAw)"&gt;
-&lt;/g&gt;&lt;defs&gt;&lt;clipPath id="cpMC4wMHw0OC4wMHwyLjg4fDEyLjAw"&gt;&lt;rect x="0.00" y="2.88" width="48.00" height="9.12"&gt;&lt;/rect&gt;&lt;/clipPath&gt;&lt;/defs&gt;&lt;g clip-path="url(#cpMC4wMHw0OC4wMHwyLjg4fDEyLjAw)"&gt;&lt;rect x="0.58" y="10.51" width="6.01" height="1.15" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="6.58" y="9.17" width="6.01" height="2.49" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="12.59" y="8.02" width="6.01" height="3.65" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="18.59" y="6.10" width="6.01" height="5.57" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="24.60" y="3.22" width="6.01" height="8.44" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="30.61" y="4.95" width="6.01" height="6.72" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="36.61" y="6.86" width="6.01" height="4.80" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;rect x="42.62" y="11.28" width="6.01" height="0.38" style="stroke-width: 0.38; fill: #000000;"&gt;&lt;/rect&gt;&lt;/g&gt;&lt;/svg&gt;
-&lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 35 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 71.7 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 51.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 74.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 88.0 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -407,32 +378,40 @@ datasummary_skim(who1)
 ### A descriptive table (Table 1):
 
 ```r
-datasummary((`Yrs of Schooling` = schooling) + 
-             (`Life Expectancy` = life_expectancy) ~ Mean + SD + N,
-                data = who1)
+names(who1) &lt;- c("Region", "Status", "Schooling (Yrs)", 
+                                  "Life Expectancy (Yrs)")
+datasummary_skim(who1,
+                 fun_numeric = list(Mean = Mean, SD = SD, Min = Min,
+                                    Median = Median, Max = Max))
 ```
 
 &lt;table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Mean &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; SD &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; N &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Mean &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; SD &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Min &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Median &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Max &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Yrs of Schooling &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 12.93 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2.91 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 173 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Schooling (Yrs) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 12.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 4.9 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 13.1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 20.4 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Life Expectancy &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 71.74 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 7.97 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 173 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Life Expectancy (Yrs) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 71.7 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 51.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 74.0 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 88.0 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -444,47 +423,13 @@ datasummary((`Yrs of Schooling` = schooling) +
 Saving it to a Word table:
 
 ```r
-datasummary_skim(who1, histogram=F,
-                 output="table.docx")
-```
-
-```
-#&gt; [1] "table.docx"
-```
-
----
-# (Re)producing beautiful results
-### A descriptive table (Table 1):
-
-For categorical variables
-
-
-```r
 datasummary_skim(who1, 
-                 type = "categorical")
+                 fun_numeric = list(Mean = Mean, SD = SD, Min = Min,
+                                    Median = Median, Max = Max),
+                 output = "table.docx")
 ```
 
-&lt;table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;"&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; status &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; N &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; % &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Developed &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 29 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 16.8 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Developing &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 144 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 83.2 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
+&gt; Need to `install.packages("pandoc")` first
 
 
 ---
@@ -495,8 +440,9 @@ Numeric variables by a categorical variable
 
 
 ```r
-datasummary_balance(~ status, # tells R to cut by this variable
-                    data=who1)
+# Tell R to cut by a given variable
+datasummary_balance(`Schooling (Yrs)`+ `Life Expectancy (Yrs)` ~ Status,
+                    data = who1)
 ```
 
 &lt;table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;"&gt;
@@ -519,7 +465,7 @@ datasummary_balance(~ status, # tells R to cut by this variable
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; schooling &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Schooling (Yrs) &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 16.5 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1.6 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 12.2 &lt;/td&gt;
@@ -528,7 +474,7 @@ datasummary_balance(~ status, # tells R to cut by this variable
    &lt;td style="text-align:right;"&gt; 0.4 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; life_expectancy &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Life Expectancy (Yrs) &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 80.9 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 3.6 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 69.9 &lt;/td&gt;
@@ -551,9 +497,9 @@ Numeric variables by a categorical variable
 
 
 ```r
-datasummary_balance(~ status,
+datasummary_balance(`Schooling (Yrs)`+ `Life Expectancy (Yrs)` ~ Status,
                     dinm = F, # drop the diff-in-means
-                    data=who1)
+                    data = who1)
 ```
 
 &lt;table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;"&gt;
@@ -573,14 +519,14 @@ datasummary_balance(~ status,
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; schooling &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Schooling (Yrs) &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 16.5 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1.6 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 12.2 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2.5 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; life_expectancy &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Life Expectancy (Yrs) &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 80.9 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 3.6 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 69.9 &lt;/td&gt;
@@ -728,11 +674,13 @@ modelsummary(fit, stars=T,
 Saving it to a Word table:
 
 ```r
-modelsummary(fit, stars=T,
+modelsummary(fit, 
+             stars=T,
              gof_omit = "Adj.|AIC|BIC|RMSE|Log",
              coef_rename = c("schooling" = "Yrs. Schooling"),
-             output="table2.docx")
+             output = "table2.docx")
 ```
+
 
 ---
 class: middle, inverse
@@ -743,14 +691,14 @@ class: middle, inverse
 
 ---
 # Residual analysis
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-22-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-23-1.svg" style="display: block; margin: auto;" /&gt;
 
 Our fitted regression line contains the "predicted" values of *LIFE_EXPECTANCY* for each value of *SCHOOLING*. But almost all of the "actual" values of *LIFE_EXPECTANCY* lie off the actual line regression line.
 
 ---
 # An example: Chile
 
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-23-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-24-1.svg" style="display: block; margin: auto;" /&gt;
 
 Observed values for Chile: `\(LIFE\_EXPECTANCY = 85\)`; `\(SCHOOLING = 16.3\)` &lt;br&gt;
 Predicted value of *LIFE_EXPECTANCY* for Chile:
@@ -762,7 +710,7 @@ $$
 $$
 ---
 # An example: Chile
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-24-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-25-1.svg" style="display: block; margin: auto;" /&gt;
 `\(\hat{LIFE\_EXPECTANCY} = 79.20\)` &lt;br&gt;
 Actual life expectancy = 85
 
@@ -772,7 +720,7 @@ Actual life expectancy = 85
 
 ---
 # Now Egypt
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-25-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-26-1.svg" style="display: block; margin: auto;" /&gt;
 Observed values for Egypt: `\(LIFE\_EXPECTANCY = 79\)`; `\(SCHOOLING = 13.1\)` &lt;br&gt;
 
 .blue[Can you calculate the predicted value of *LIFE_EXPECTANCY* for Egypt and compare it to the observed?]
@@ -845,7 +793,7 @@ For the *p*-values that we computed in the regression analysis to be correct, th
 boxplot(resid(fit))
 ```
 
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-29-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-30-1.svg" style="display: block; margin: auto;" /&gt;
 
 --
 A few outliers, but we seem to be doing ok...
@@ -855,7 +803,7 @@ A few outliers, but we seem to be doing ok...
 
 For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**&lt;sup&gt;1&lt;/sup&gt;
 
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-30-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-31-1.svg" style="display: block; margin: auto;" /&gt;
 
 .footnote[[1] We have solutions if they are not which we will learn about in EDUC 643. ]
 --
@@ -869,7 +817,7 @@ Pretty good, pretty good...
 # Residual vs. fitted plot 
 
 For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-31-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-32-1.svg" style="display: block; margin: auto;" /&gt;
 
 Key assumption checks for normality:
 - The residuals "bounce randomly" around the 0 line. 
@@ -880,7 +828,7 @@ Key assumption checks for normality:
 # Residual vs. fitted plot
 
 For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-32-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-33-1.svg" style="display: block; margin: auto;" /&gt;
 
 Key assumption checks for normality:
 - The residuals "bounce randomly" around the 0 line. 
@@ -900,7 +848,7 @@ ggplot(who, aes(x = predict, y = resid)) +
   theme_minimal(base_size = 16)
 ```
 
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-33-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-34-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
 # Writing it up
@@ -912,7 +860,7 @@ ggplot(who, aes(x = predict, y = resid)) +
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
-   &lt;th style="text-align:center;"&gt;  (1) &lt;/th&gt;
+   &lt;th style="text-align:center;"&gt; &amp;amp;nbsp;(1) &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
@@ -954,7 +902,7 @@ ggplot(who, aes(x = predict, y = resid)) +
 
 &gt; .small[An analysis of the residuals from our fitted model suggests that our regression assumptions are reasonably well met and we have appropriately characterized the relationship between schooling and life expectancy. Despite the presence of a few outliers, our residuals are roughly symmetrically distributed around 0. As we note in Appendix Figure A1, our fitted regression does seem to underpredict life expectancy for very low levels of schooling.]
 
-&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-35-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression2_files/figure-html/unnamed-chunk-36-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
 # Key takeaways
