--- a/assignments.html
+++ b/assignments.html
@@ -953,8 +953,8 @@ Lectures
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1044,8 +1044,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1182,24 +1186,17 @@ estimation</p></li>
 <p>Deadline: December 2, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<!-- 
-Key: 
- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
+<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment04_key.R">R script</a></p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
 <p>Deadline: December 11, 4:59pm</p>
-<!-- 
-Download: 
-[html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) 
-
-Key:
-
--->
-<blockquote>
-
-</blockquote>
+<p>Download: <a href="./assignments/assignment05.html">html file</a> |
+<a href="./data/ah01.csv">ah01.csv dataset</a>; <a
+href="./data/ah02.csv">ah02.csv dataset</a></p>
+<p>Key:</p>
 </div>
 </div>
 
