--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -368,8 +368,8 @@ clearly when your work is joint and any other individual or resource
 </div>
 <div id="submission-requirements" class="section level3">
 <h3>Submission Requirements</h3>
-<p>Please upload below two files on Canvas by <strong>December 6th at
-11:59pm</strong>:</p>
+<p>Please upload the below two files on Canvas by <strong>December 11th
+at 4:59pm</strong>:</p>
 <ol style="list-style-type: decimal">
 <li>An .html, .doc(x) or .pdf file that includes your typed responses
 (in your own words and not identical to anybody else’s except your
