--- a/schedule.html
+++ b/schedule.html
@@ -953,8 +953,8 @@ Lectures
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1044,8 +1044,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1339,22 +1343,23 @@ framework</li>
 <li>Describe strategies to improve replicability and generalizability of
 quantitative research</li>
 </ul>
-<!--
-- Classes 17-18 (11/28 & 11/30): [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
-- Data management cheat sheet: [html](data_management.html) 
-
--->
+<p>Lecture slides:</p>
+<ul>
+<li>Classes 17-18 (11/28 &amp; 11/30): <a
+href="./slides/EDUC641_17_critiques.html">html</a> | <a
+href="./slides/EDUC641_17_critiques.pdf">pdf</a></li>
+<li>Data management cheat sheet: <a
+href="data_management.html">html</a></li>
+</ul>
 </div>
 <div id="final-assignment" class="section level2">
 <h2>Final Assignment</h2>
 <ul>
-<li>Due December 11 at 4:59pm</li>
+<li><p>Due December 11 at 4:59pm</p></li>
+<li><p><a href="./assignments/assignment05.html">html file</a></p></li>
+<li><p><a href="./data/ah01.csv">ah01.csv</a> | <a
+href="./data/ah02.csv">ah02.csv</a></p></li>
 </ul>
-<!--
-- [html file](./assignments/assignment05.html)
-- [ah01.csv](./data/ah01.csv) | [ah02.csv](./data/ah02.csv)
-
--->
 </div>
 
 <!--radix_placeholder_site_after_body-->
